<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jeeyoh</groupId>
	<artifactId>jeeyoh</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>jeeyoh</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>3.1.0.RELEASE</spring.version>
		<slf4j.version>1.6.1</slf4j.version>
		<spring.security.version>3.0.8.RELEASE</spring.security.version>
	</properties>

	<modules>
		<module>controller</module>
		<module>service</module>
		<module>persistence</module>
		<module>common</module>
	</modules>

	<dependencies>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.context</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<!-- Exclude Commons Logging in favor of SLF4j -->
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>com.springsource.org.apache.commons.logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.oxm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>org.springframework.web	</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- Hibernate is not getting used in this project -->
		<!-- Still we have to include this library for JSR303 provider -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.2.0.Final</version>
		</dependency>

		<!-- AspectJ -->
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>com.springsource.org.aspectj.weaver</artifactId>
			<version>1.6.8.RELEASE</version>
		</dependency>

		<!-- AOP dependency -->
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.2</version>
		</dependency>

	<!-- Tiles dependencies -->

		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-core</artifactId>
			<version>2.2.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-template</artifactId>
			<version>2.2.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-jsp</artifactId>
			<version>2.2.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-servlet</artifactId>
			<version>2.2.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		

		<!-- Spring File Upload Dependency -->
		<!-- Apache Commons Upload -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.2</version>
		</dependency>

		<!-- Apache Commons Upload -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>com.springsource.slf4j.log4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.8</version>
		</dependency>
		<!-- Jackson JSON Mapper -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-xc</artifactId>
			<version>1.9.11</version>
		</dependency>
		<!-- Tuckey URL rewritte filter dependency -->
		<dependency>
			<groupId>org.tuckey</groupId>
			<artifactId>urlrewritefilter</artifactId>
			<version>4.0.3</version>
		</dependency>

		<dependency>
			<groupId>oauth.signpost</groupId>
			<artifactId>signpost-core</artifactId>
			<version>1.2.1.1</version>
		</dependency>
		<dependency>
			<groupId>oauth.signpost</groupId>
			<artifactId>signpost-commonshttp4</artifactId>
			<version>1.2.1.1</version>
		</dependency>
		<!-- JUNIT Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<repository>
			<id>spring-snapshot</id>
			<name>SpringSource Snapshot Repository</name>
			<url>http://repo.springsource.org/libs-snapshot</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.external</id>
			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/external</url>
		</repository>
		<repository>
			<id>jboss - public</id>
			<name>jboss - public</name>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
		</repository>

		<!-- <repository> <id>camunda</id> <url>http://fox.camunda.com/mvn/</url> 
			</repository> -->
		<repository>
			<id>jsch.sf.net</id>
			<url>http://jsch.sf.net/maven2/</url>
		</repository>
		<repository>
			<id>repo2.maven.org</id>
			<url>http://repo2.maven.org/maven2</url>
		</repository>

	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<verbose>true</verbose>
					<source>1.6</source>
					<target>1.6</target>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128m</argLine>
					<failIfNoTests>false</failIfNoTests>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>install</id>
						<phase>install</phase>
						<goals>
							<goal>sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<version>1.0</version>
				<configuration>
					<warFile>target/jeeyoh.war</warFile>
					<server>jeeyohserver</server>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<!-- Profiles -->
	<profiles>
		<profile>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<id>default</id>
			<properties>
				<!-- DB Connection -->
				<db.jdbc.driverClassName>com.mysql.jdbc.Driver</db.jdbc.driverClassName>
				<db.jdbc.url>jdbc:mysql://localhost:3306/jeeyoh?zeroDateTimeBehavior=convertToNull</db.jdbc.url>
				<db.jdbc.username>root</db.jdbc.username>
				<!-- <db.jdbc.password>Gaurav@123</db.jdbc.password> -->
				<db.jdbc.password></db.jdbc.password>

				<!-- Hibernate -->
				<hibernate.show_sql>true</hibernate.show_sql>
				<hibernate.dialect>org.hibernate.dialect.MySQLDialect</hibernate.dialect>

				<!-- C3P0 -->
				<c3p0.acquireIncrement>1</c3p0.acquireIncrement>
				<c3p0.minPoolSize>10</c3p0.minPoolSize>
				<c3p0.maxPoolSize>100</c3p0.maxPoolSize>
				<c3p0.maxIdleTime>100</c3p0.maxIdleTime>

				<!-- Groupon configuration -->
				<groupon.client.id>93e9598d1ac2d5eca3017dee020980eb2ad8e87b</groupon.client.id>
				<groupon.deals.isdefault.radius>false</groupon.deals.isdefault.radius>
				<groupon.deals.radius.overridden.value>25000</groupon.deals.radius.overridden.value>
				<groupon.division.api.url>http://api.groupon.com/v2/divisions?client_id={clientId}</groupon.division.api.url>
				<groupon.deals.api.url>http://api.groupon.com/v2/deals?client_id={clientId}</groupon.deals.api.url>
				<groupon.deals.bydivisionsid.api.url>http://api.groupon.com/v2/deals?client_id={clientId}&amp;division_id={divisionId}</groupon.deals.bydivisionsid.api.url>
				<groupon.deals.bylatlng.api.url>http://api.groupon.com/v2/deals?client_id={clientId}&amp;lng={longitude}&amp;lat={lattitude}&amp;radius={radius}</groupon.deals.bylatlng.api.url>
				<groupon.deal.post.api.url>http://api.groupon.com/v2/deals/{dealId}/posts?client_id={clientId}</groupon.deal.post.api.url>
				<groupon.deal.image.api.url>https://api.groupon.com/v2/deals/{dealId}/images?client_id={clientId}</groupon.deal.image.api.url>
				<groupon.says.api.url>http://api.groupon.com/v2/groupon_says?client_id={clientId}</groupon.says.api.url>

				<!-- smtp email -->
				<sender.name>Jeeyoh</sender.name>
				<sender.email>jeeyoh.testing@gmail.com</sender.email>
				<mail.smtp.loginid>jeeyoh.testing@gmail.com</mail.smtp.loginid>
				<mail.smtp.password>jeeyoh123</mail.smtp.password>
				<mail.smtp.host.value>smtp.gmail.com</mail.smtp.host.value>
				<mail.smtp.port.num>587</mail.smtp.port.num>
				
				<!-- <sender.name>Jeeyoh</sender.name>
				<sender.email>babita.dhami@evontech.com</sender.email>
				<mail.smtp.loginid>babita.dhami@evontech.com</mail.smtp.loginid>
				<mail.smtp.password>babita15</mail.smtp.password>
				<mail.smtp.host.value>smtpout.secureserver.net</mail.smtp.host.value>
				<mail.smtp.port.num>465</mail.smtp.port.num> -->

				<!-- Upload File -->
				<host.name>http://192.168.1.217</host.name>
				<!-- <host.name>http://54.243.29.6</host.name> -->
				<app.server.url>${host.name}:${http.port}</app.server.url> 
				<http.port>8080</http.port>
				<host.path>${host.name}:${http.port}/</host.path>
				<app.media.uploaded.folder>UploadedImages</app.media.uploaded.folder>
				<!-- <app.uploaded.media.server.path>../webapps/${app.media.uploaded.folder}/</app.uploaded.media.server.path>
				 --><app.uploaded.media.server.path>/var/lib/tomcat7/webapps/${app.media.uploaded.folder}/</app.uploaded.media.server.path>

				<!-- Stubhub configuration -->
				<stubhub.base.url>http://www.stubhub.com/</stubhub.base.url>
				<stubhub.image.url>http://www.stubhub.com/data/venue_maps/</stubhub.image.url>

				<!-- Living Social Configuration -->
				<livingsocial.api.key>646DACA59DAE4C4E92D9D8B6CA3E293D</livingsocial.api.key>
				<livingsocial.deals.api.url>http://monocle.livingsocial.com/v2/deals?city={cityId}&amp;api-key={apiKey}</livingsocial.deals.api.url>
				<livingsocial.cities.api.url>https://www.livingsocial.com/services/city/v2/cities</livingsocial.cities.api.url>

				<!-- jobs configuration -->
				<jobs.wallfeed.crontime>0 10 12 * * ?</jobs.wallfeed.crontime><!-- 0 0 10 ? * FRI,SAT -->
				<jobs.suggestion.crontime>0 0 17 * * ?</jobs.suggestion.crontime><!-- 0 0 10 ? * FRI,SAT -->
				<jobs.fetchfilter.crontime>0 10 12 * * ?</jobs.fetchfilter.crontime>
				<jobs.matchingEvents.crontime>0 0 17 * * ?</jobs.matchingEvents.crontime>
				<jobs.topJeeyohSuggestions.crontime>0 0 0/1 1/1 * ? *</jobs.topJeeyohSuggestions.crontime>
			</properties>
		</profile>
		
			<profile>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<id>dev</id>
			<properties>
				<!-- DB Connection -->
				<db.jdbc.driverClassName>com.mysql.jdbc.Driver</db.jdbc.driverClassName>
				<db.jdbc.url>jdbc:mysql://localhost:3306/jeeyoh?zeroDateTimeBehavior=convertToNull</db.jdbc.url>
				<db.jdbc.username>root</db.jdbc.username>
				<db.jdbc.password>Gaurav@123</db.jdbc.password>

				<!-- Hibernate -->
				<hibernate.show_sql>true</hibernate.show_sql>
				<hibernate.dialect>org.hibernate.dialect.MySQLDialect</hibernate.dialect>

				<!-- C3P0 -->
				<c3p0.acquireIncrement>1</c3p0.acquireIncrement>
				<c3p0.minPoolSize>10</c3p0.minPoolSize>
				<c3p0.maxPoolSize>100</c3p0.maxPoolSize>
				<c3p0.maxIdleTime>100</c3p0.maxIdleTime>

				<!-- Groupon configuration -->
				<groupon.client.id>93e9598d1ac2d5eca3017dee020980eb2ad8e87b</groupon.client.id>
				<groupon.deals.isdefault.radius>false</groupon.deals.isdefault.radius>
				<groupon.deals.radius.overridden.value>25000</groupon.deals.radius.overridden.value>
				<groupon.division.api.url>http://api.groupon.com/v2/divisions?client_id={clientId}</groupon.division.api.url>
				<groupon.deals.api.url>http://api.groupon.com/v2/deals?client_id={clientId}</groupon.deals.api.url>
				<groupon.deals.bydivisionsid.api.url>http://api.groupon.com/v2/deals?client_id={clientId}&amp;division_id={divisionId}</groupon.deals.bydivisionsid.api.url>
				<groupon.deals.bylatlng.api.url>http://api.groupon.com/v2/deals?client_id={clientId}&amp;lng={longitude}&amp;lat={lattitude}&amp;radius={radius}</groupon.deals.bylatlng.api.url>
				<groupon.deal.post.api.url>http://api.groupon.com/v2/deals/{dealId}/posts?client_id={clientId}</groupon.deal.post.api.url>
				<groupon.deal.image.api.url>https://api.groupon.com/v2/deals/{dealId}/images?client_id={clientId}</groupon.deal.image.api.url>
				<groupon.says.api.url>http://api.groupon.com/v2/groupon_says?client_id={clientId}</groupon.says.api.url>

				<!-- smtp email -->
				<sender.name>Jeeyoh</sender.name>
				<sender.email>jeeyoh.testing@gmail.com</sender.email>
				<mail.smtp.loginid>jeeyoh.testing@gmail.com</mail.smtp.loginid>
				<mail.smtp.password>jeeyoh123</mail.smtp.password>
				<mail.smtp.host.value>smtp.gmail.com</mail.smtp.host.value>
				<mail.smtp.port.num>587</mail.smtp.port.num>

				<!-- Upload File -->
				
				<host.name>http://54.83.75.22</host.name>
				<app.server.url>${host.name}:${http.port}</app.server.url> 
				<http.port>8080</http.port>
				<host.path>${host.name}:${http.port}/</host.path>
				<app.media.uploaded.folder>UploadedImages</app.media.uploaded.folder>
				<app.uploaded.media.server.path>../webapps/${app.media.uploaded.folder}/</app.uploaded.media.server.path>

				<!-- Stubhub configuration -->
				<stubhub.base.url>http://www.stubhub.com/</stubhub.base.url>
				<stubhub.image.url>http://www.stubhub.com/data/venue_maps/</stubhub.image.url>

				<!-- Living Social Configuration -->
				<livingsocial.api.key>646DACA59DAE4C4E92D9D8B6CA3E293D</livingsocial.api.key>
				<livingsocial.deals.api.url>http://monocle.livingsocial.com/v2/deals?city={cityId}&amp;api-key={apiKey}</livingsocial.deals.api.url>
				<livingsocial.cities.api.url>https://www.livingsocial.com/services/city/v2/cities</livingsocial.cities.api.url>

				<!-- jobs configuration -->
				<jobs.wallfeed.crontime>0 10 12 * * ?</jobs.wallfeed.crontime><!-- 0 0 10 ? * FRI,SAT -->
				<jobs.suggestion.crontime>0 0 17 * * ?</jobs.suggestion.crontime><!-- 0 0 10 ? * FRI,SAT -->
				<jobs.fetchfilter.crontime>0 10 12 * * ?</jobs.fetchfilter.crontime>
				<jobs.matchingEvents.crontime>0 0 17 * * ?</jobs.matchingEvents.crontime>
				<jobs.topJeeyohSuggestions.crontime>0 0 0/1 1/1 * ? *</jobs.topJeeyohSuggestions.crontime>
			</properties>
		</profile>
	</profiles>
</project>
